prover-ray/zkcdriver/testdata/synced/invalid/for_01.zkc
//error:4:7-8:variable already declared
fn f(x:u8) -> (r:u8) {
  var i:u8 = 0
  for i:u8 = 0; i < x; i = i + 1 {
    r = 1
  }
  return
}
